# Battery_Fault_Detection

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
results/: train_pinn_v2_history.csv  train_pinn_window_history.csv
results/cnn/: soc_test_metrics.json  soc_test_predictions.csv  soc_train_history.csv  test_metrics.json  test_per_file.csv  test_predictions.csv  train_history.csv
results/pinn/: train_history.csv
results/three_scalograms/: similarity.csv
src/: compare_bd_cs.py  config.py  infer_pinn.py  three_scalogram_builder.py  train_classifier.py  train_pinn_healthy.py  visualize_three_scalograms.py
src/config/: __init__.py  settings.py
src/data/: prepare_pinn_features.py  tsinghua_loader.py
src/inference/: infer_pinn.py
src/pinn/: battery_physics.py  data_loader.py  deep_neural_network.py  pinn_v2.py
src/scalograms/: three_scalogram_builder.py
src/training/: train_classifier.py  train_pinn_healthy.py
src/verification/: verify_residual_signal.py
src/visualization/: compare_bd_cs.py  visualize_dataset.py  visualize_three_scalograms.py
src/wavelet/: cwt_utils.py  image_utils.py  model.py  plot_utils.py  preprocess.py  scalogram_metrics.py
